--- a/createcsv.ipynb
+++ b/createcsv.ipynb
@@ -2,31 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "from faker import Faker\n",
+    "import requests\n",
+    "import random\n",
     "\n",
-    "# Initialiser un objet Faker\n",
+    "\n",
+    "# Initialiser un objet Faker avec un seed pour la france\n",
     "fake = Faker('fr_FR')\n",
+    "\n",
+    "# Récupération de la liste des pays à partir de l'API RESTcountries\n",
+    "#on ne peut pas utiliser faker pour pays/ville car il n'accorde pas le pays à la bonne ville\n",
+    "url = \"https://restcountries.com/v2/all\"\n",
+    "response = requests.get(url)\n",
+    "data = response.json()\n",
     "\n",
     "# Ouvrir un fichier en mode écriture pour écrire les données\n",
     "with open('output.csv', 'w', newline='') as csvfile:\n",
+    "    \n",
+    "    #on remplit l'entête\n",
     "    fieldnames = ['nom', 'adresse', 'pays', 'ville', 'hommeOufemme']\n",
     "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "    writer.writeheader()\n",
     "\n",
-    "    # Générer des données aléatoires et les écrire dans le fichier CSV\n",
-    "    for i in range(10): # changez la valeur 10 pour le nombre de ligne voulue\n",
+    "    #on génère 100 coiffeurs, on réalité le code s'arrête souvent avant à cause d'un pb de la fonction 'random_country[\"capital\"]\n",
+    "    for i in range(100): # changez la valeur pour le nombre de ligne voulue\n",
+    "\n",
+    "        # Sélection aléatoire d'un pays et de sa capitale\n",
+    "        random_country = random.choice(data)\n",
+    "        country_name = random_country[\"name\"]\n",
+    "        capital_name = random_country[\"capital\"]\n",
+    "\n",
+    "       \n",
     "        writer.writerow({\n",
     "            'nom': fake.name(),\n",
     "            'adresse': fake.street_name(),\n",
-    "            'pays': fake.country(),\n",
-    "            'ville': fake.city(),\n",
+    "            'pays': country_name,\n",
+    "            'ville': capital_name,\n",
     "            'hommeOufemme': fake.random_element(elements=(\"H\", \"F\"))\n",
     "        })\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#on choisit 7 coupes unisexes\n",
+    "coupes =list( [\"carré\", \"wolfcut\",\"pixie cut\",\"pointes\",\"dégradé\",\"layers\",\"mulet\"]) \n",
+    "\n",
+    "# Ouverture du fichier CSV en mode lecture\n",
+    "with open('liste_coiffeurs.csv', mode='r') as file:\n",
+    "    #on lit le csv et on indique que les colonnes sont séparées par un ;\n",
+    "    reader = csv.reader(file, delimiter =';' )\n",
+    "    # Récupération des en-têtes de colonne\n",
+    "    headers = next(reader)\n",
+    "    # Récupération de l'index de la colonne \"nom\"\n",
+    "    name_index = headers.index('nom')\n",
+    "    #on ouvre le csv dans lequel on veut écrire\n",
+    "    with open('liste_coupes_de_cheveux.csv', mode='w') as new_file:\n",
+    "        #on lui crée une entête\n",
+    "        fieldnames = ['coiffeur','longueur','forme','hommeOufemme','tarif']\n",
+    "        writer = csv.DictWriter(new_file, fieldnames=fieldnames, delimiter=';')\n",
+    "        writer.writeheader()\n",
+    "\n",
+    "        # Lecture des données ligne par ligne\n",
+    "        for row in reader:\n",
+    "            # Récupération de la valeur de la colonne \"nom\" pour chaque ligne\n",
+    "            name = row[name_index]\n",
+    "            \n",
+    "            #on définit aléatoirmeent si le coiffeur fera des coupes hommes ou femmes\n",
+    "            elements=['F', 'H']\n",
+    "            genre = random.choice(elements)\n",
+    "\n",
+    "            #pour chaque coiffeur, on lui affecte les 7 coupes\n",
+    "            for i in range(7) :\n",
+    "                name = row[name_index]\n",
+    "                writer.writerow({\n",
+    "                    'coiffeur': name,\n",
+    "                    'longueur': fake.random_element(elements=(\"court\", \"mi-long\",\"long\")),\n",
+    "                    'forme': coupes[i],\n",
+    "                    'hommeOufemme': genre,\n",
+    "                    'tarif': random.randint(15, 150),\n",
+    "                })\n",
+    "                \n",
+    "##attention les données sont séparées par des virugules, il faut chnager par des ; avec 'change all occruences'"
    ]
   }
  ],
@@ -46,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
