correction d'un beug

--- a/createcsv.ipynb
+++ b/createcsv.ipynb
@@ -49,9 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'csv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Ouverture du fichier CSV en mode lecture\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mliste_coiffeurs.csv\u001b[39m\u001b[39m'\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[1;32m      6\u001b[0m     \u001b[39m#on lit le csv et on indique que les colonnes sont séparées par un ;\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mreader(file, delimiter \u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m )\n\u001b[1;32m      8\u001b[0m     \u001b[39m# Récupération des en-têtes de colonne\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     headers \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(reader)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'csv' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#on choisit 7 coupes unisexes\n",
     "coupes =list( [\"carré\", \"wolfcut\",\"pixie cut\",\"pointes\",\"dégradé\",\"layers\",\"mulet\"]) \n",
@@ -76,9 +88,9 @@
     "            # Récupération de la valeur de la colonne \"nom\" pour chaque ligne\n",
     "            name = row[name_index]\n",
     "            \n",
-    "            #on définit aléatoirmeent si le coiffeur fera des coupes hommes ou femmes\n",
-    "            elements=['F', 'H']\n",
-    "            genre = random.choice(elements)\n",
+    "            #on recupère le genre des coupes du coiffeur\n",
+    "            genre = row[headers.index('hommeOufemme')]\n",
+    "            \n",
     "\n",
     "            #pour chaque coiffeur, on lui affecte les 7 coupes\n",
     "            for i in range(7) :\n",
@@ -111,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
