correction d'un beug

--- a/createcsv.ipynb
+++ b/createcsv.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'capital'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [5], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m random_country \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mchoice(data)\n\u001b[1;32m     29\u001b[0m country_name \u001b[39m=\u001b[39m random_country[\u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m---> 30\u001b[0m capital_name \u001b[39m=\u001b[39m random_country[\u001b[39m\"\u001b[39;49m\u001b[39mcapital\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[1;32m     33\u001b[0m writer\u001b[39m.\u001b[39mwriterow({\n\u001b[1;32m     34\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mnom\u001b[39m\u001b[39m'\u001b[39m: fake\u001b[39m.\u001b[39mname(),\n\u001b[1;32m     35\u001b[0m     \u001b[39m'\u001b[39m\u001b[39madresse\u001b[39m\u001b[39m'\u001b[39m: fake\u001b[39m.\u001b[39mstreet_name(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mhommeOufemme\u001b[39m\u001b[39m'\u001b[39m: fake\u001b[39m.\u001b[39mrandom_element(elements\u001b[39m=\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mH\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m     39\u001b[0m })\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'capital'"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "from faker import Faker\n",
@@ -49,21 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'csv' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Ouverture du fichier CSV en mode lecture\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mliste_coiffeurs.csv\u001b[39m\u001b[39m'\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[1;32m      6\u001b[0m     \u001b[39m#on lit le csv et on indique que les colonnes sont séparées par un ;\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mreader(file, delimiter \u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m )\n\u001b[1;32m      8\u001b[0m     \u001b[39m# Récupération des en-têtes de colonne\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     headers \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(reader)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'csv' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#on choisit 7 coupes unisexes\n",
     "coupes =list( [\"carré\", \"wolfcut\",\"pixie cut\",\"pointes\",\"dégradé\",\"layers\",\"mulet\"]) \n",
